--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^15.2.0",
     "@compodoc/compodoc": "^1.1.19",
     "chart.js": "^4.2.1",
+    "crypto-js": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -34,6 +35,7 @@
     "@angular-devkit/build-angular": "^15.2.2",
     "@angular/cli": "^15.2.0",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
