--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@compodoc/compodoc": "^1.1.19",
     "chart.js": "^4.2.1",
     "crypto-js": "^4.1.1",
+    "leaflet": "^1.9.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
