--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@compodoc/compodoc": "^1.1.19",
     "chart.js": "^4.2.1",
     "crypto-js": "^4.1.1",
-    "leaflet": "^1.9.3",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.5",
     "tslib": "^2.3.0",
